--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
-  <script src="//unpkg.com/3d-force-graph@1"></script>
-  <script src="//unpkg.com/d3-dsv"></script>
+  <script src="./scripts/3d-force-graph.min.js"></script>
+  <script src="./scripts/d3-dsv.min.js"></script>
+  <!-- <script src="//unpkg.com/3d-force-graph@1"></script>
+  <script src="//unpkg.com/d3-dsv"></script> -->
 
   <script src="./data-set-loader.js"></script>
 
